feat: added provisional neoforge support